src/objects/Tree_Plantation__c.object
<CustomObject>
    <label>Tree Plantation</label>
    <nameField>
        <displayFormat>Tree-{000}</displayFormat>
        <label>Tree Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tree Plantations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age (In years)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Tree_Planted__c</fullName>
        <label>Number Of Tree Planted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planted_In__c</fullName>
        <label>Planted In</label>
        <referenceTo>City__c</referenceTo>
        <relationshipName>Tree</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Tree__c</fullName>
        <label>Tree</label>
        <referenceTo>Tree__c</referenceTo>
        <relationshipLabel>Tree Plantation</relationshipLabel>
        <relationshipName>Tree_Plantation</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Age__c</columns>
        <columns>Tree__c</columns>
        <columns>Planted_In__c</columns>
        <columns>Number_Of_Tree_Planted__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>